# lightweight-snappy

./: CMakeLists.txt  LICENSE  README.md  ciao.txt  makefile
Snappy/: BST.c  BST.h  CMakeLists.txt  IOUtils.c  IO_utils.c  IO_utils.h  SnappyCompression.c  SnappyDecompression.c  SnappyDecompression.h  Varint.c  Varint.h  alice_decompressed  buffer_compression.c  buffer_compression.h  cmd.c  foglio_per_test.c  makefile  output.txt  output_decompressed.txt  output_decompressed_copy.txt  result.c  result.h  snappy_compression.c  snappy_compression.h  snappy_compression_tree.c  snappy_compression_tree.h  snappy_decompression.c  snappy_decompression.h  snappy_test  snappy_test.c  testWikipedia.txt  testWikipediaCompressed  test_BST  test_BST.c  test_compressed  test_varint  test_varint.c  varint.c  varint.h
Snappy/Compressed_test/: 1000000b1.snp  1000000b2.snp  1000000b3.snp  1000000b4.snp  1000000b5.snp  100000b2.snp  100000b4.snp  10000b1.snp  10000b2.snp  10000b5.snp  1000b2.snp  1000b5.snp  200000b1.snp  200000b2.snp  200000b5.snp  2000b1.snp  2000b3.snp  2000b4.snp  32k_ff.snp  32k_random_snp  500000b1.snp  500000b2.snp  500000b4.snp  500000b5.snp  50000b2.snp  50000b3.snp  50000b4.snp  50000b5.snp  5000b3.snp  5000b4.snp  500b2.snp  800000b1.snp  800000b5.snp  80000b2.snp  alice.txt_snp  alice_compressed  alice_compressed.snp  immagine.tiff_snp  jpg_compressed  tiff_compressed  (+3 more)
Snappy/Decompressed_test/: 100000b4dec  10000b4dec  1000b4dec  20000b3dec  20000b5dec  2000b3dec  500000b3dec  50000b2dec  50000b4dec  5000b4dec  5000b5dec  500b3dec  800000b5dec  80000b2dec  (+5 more)
(+278 files in other folders)
